src/objects/Food_Bank_Commodity__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>List of items for which the food bank tracks monthly limits and usage - for example, you get up to 3 boxes of eggs per month.</description>
    <fields>
        <fullName>Allow_Overage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, staff will be alerted when clients use more than the limit, but can choose to overlook the warning.</inlineHelpText>
        <label>Allow Overage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Limit__c</fullName>
        <label>Monthly Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Food Bank Commodity</label>
</CustomObject>